Fixed overlap issue with app menu and app navigation

--- a/core/css/core/_apps.scss
+++ b/core/css/core/_apps.scss
@@ -13,7 +13,7 @@
 	}
 
 	a.active::before {
-		border-bottom-color: $background-normal;
+		border-bottom-color: transparent;
 	}
 
 	&:hover a::before {
